--- a/private/skins/qobo/templates/components/test/banners.twig
+++ b/private/skins/qobo/templates/components/test/banners.twig
@@ -1,10 +1,10 @@
 {% if user_ban_data %}
-    <div class="banner-test banner-test-danger">
+    <div class="banner banner-danger">
         {{ user_ban_data.reason | markdown }}
     </div>
 {% endif %}
 {% if session.notif_message %}
-    <div class="banner-test banner-test-{{ session.notif_color }}">
+    <div class="banner banner-{{ session.notif_color }}">
         {{ session.notif_message }}
     </div>
     {{ remove_notification() }}
