--- a/private/skins/qobo/templates/components/test/footer.twig
+++ b/private/skins/qobo/templates/components/test/footer.twig
@@ -1,4 +1,4 @@
-<div class="footer-test">
+<div class="footer">
     <p>© 2021-{{ 'now' | date('Y') }} OpenSB contributors.
         | <a href="/privacy">Privacy policy</a> · <a href="/theme">Customize theme</a></p>
     <p>Running <a href="/version">OpenSB {{ opensb_version }}</a></p>
