--- a/biscuit/stylesheets/default.scss
+++ b/biscuit/stylesheets/default.scss
@@ -7,6 +7,13 @@
 
 @import 'shared/imports';
 
+@import url('https://rsms.me/inter/inter.css');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+
+// fonts
+$font: 'Inter', sans-serif;
+$font-var: 'InterVariable', sans-serif;
+
 :root {
 	font-family: $font;
 	font-feature-settings: 'liga' 1, 'calt' 1;
