--- a/private/skins/qobo/templates/components/test/footer.twig
+++ b/private/skins/qobo/templates/components/test/footer.twig
@@ -3,8 +3,6 @@
         | <a href="/privacy">Privacy policy</a> · <a href="/theme">Customize theme</a></p>
     <p>Running <a href="/version">OpenSB {{ opensb_version }}</a></p>
     {% if is_debug %}
-        <p>
-            {{ profiler_stats() }}
-        </p>
+        <p>{{ profiler_stats() }}</p>
     {% endif %}
 </div>
