invite keys part 2: everything else
redesigned admin panel a little bit

--- a/biscuit/stylesheets/default.scss
+++ b/biscuit/stylesheets/default.scss
@@ -171,6 +171,7 @@ hr {
 @import 'default/buttons';
 @import 'default/jumbotron';
 @import 'default/menus';
+@import 'default/tabs';
 
 @import 'default/watch_page';
 @import 'default/profile_page';
