--- a/biscuit/stylesheets/shared/_base_variables.scss
+++ b/biscuit/stylesheets/shared/_base_variables.scss
@@ -47,6 +47,7 @@ $pfp-roundness: 100%;
 // buttons
 $button-padding: 6px 11px;
 $button-padding-small: 3px 8px;
+$button-padding-huge: 0.5em 1em;
 
 // content boxes
 $content-box-background-color: #FFF;
