implement submission deletion after 3 fucking years

--- a/private/skins/qobo/templates/components/_edit_submission.twig
+++ b/private/skins/qobo/templates/components/_edit_submission.twig
@@ -2,14 +2,14 @@
     <table cellpadding="0" cellspacing="0">
         <tr valign="top">
             <td>
-                <a href="/view/{{ submission.id }}">
+                <a href="/edit?v={{ submission.id }}">
                     <img src="{{ thumbnail(submission.id, submission.type, submission.bools.custom_thumbnail) }}" width="120"
                          alt="{{ submission.title }}" class="content-image">
                 </a>
             </td>
             <td>
                 <div class="content-title">
-                    <a href="/view/{{ submission.id }}">
+                    <a href="/edit?v={{ submission.id }}">
                         {{ submission.title }}
                     </a>
                 </div>
@@ -22,8 +22,11 @@
                         <span class="fade">No description.</span>
                     {% endif %}
                 </div>
-                <div class="icons">
-                    {{ show_ratings(submission.interactions.ratings) }}
+                <div>
+                    <a href="/edit?v={{ submission.id }}" class="button button-secondary">Edit</a>
+                    <a href="/delete?v={{ submission.id }}"
+                       onclick="return confirm('Are you sure?');"
+                       class="button button-danger">Delete</a>
                 </div>
             </td>
         </tr>
