--- a/private/skins/qobo/templates/portal.twig
+++ b/private/skins/qobo/templates/portal.twig
@@ -11,7 +11,7 @@
             {% endif %}
         </div>
         <div class="banner banner-secondary">
-            <strong>NOTE</strong>: This feature is incomplete, and may not work properly.
+            <strong>NOTE</strong>: This page is still incomplete.
         </div>
         <br>
         <div class="content-box">
