--- a/private/skins/qobo/templates/edit.twig
+++ b/private/skins/qobo/templates/edit.twig
@@ -5,7 +5,7 @@
 	{% block content %}
         <div class="section">
             <div class="section-title">
-                <h1>Modify submission ({{ data.id }})</h1>
+                <h1>Modify submission</h1>
             </div>
             <div class="content-box">
                 <form name="uploadForm" id="uploadForm" method="post" action="edit" enctype="multipart/form-data">
