add borders to thumbnails, fix channel banners?

--- a/biscuit/stylesheets/default/_content_box.scss
+++ b/biscuit/stylesheets/default/_content_box.scss
@@ -1,6 +1,7 @@
-.content-image
+.thumbnail
 {
     border-radius: 4px;
+    border: 1px solid $content-box-border-color;
 }
 
 .content-header
@@ -36,6 +37,7 @@
     padding: $context-box-padding;
     overflow: hidden;
     word-break: break-word;
+    border-radius: 4px;
 
     .content-entry
     {
