--- a/private/skins/qobo/templates/components/_edit_submission.twig
+++ b/private/skins/qobo/templates/components/_edit_submission.twig
@@ -4,7 +4,7 @@
             <td>
                 <a href="/edit?v={{ submission.id }}">
                     <img src="{{ thumbnail(submission.id, submission.type, submission.bools.custom_thumbnail) }}" width="120"
-                         alt="{{ submission.title }}" class="content-image">
+                         alt="{{ submission.title }}" class="content-image thumbnail">
                 </a>
             </td>
             <td>
