--- a/private/skins/qobo/templates/components/_comment_input.twig
+++ b/private/skins/qobo/templates/components/_comment_input.twig
@@ -1,9 +1,10 @@
 <div class="new-comment" id="comment_field">
     <div class="text-title">
-        <span>New comment</span>
+        <span>New Comment</span>
     </div>
     <textarea class="form-submit-wide" id="comment_contents" name="comment" maxlength="1000"
-              style="overflow:hidden;resize:vertical" rows="4"></textarea>
-    <input type="submit" id="comment_button" name="post" class="button button-secondary"
-           value="Add comment">
+              placeholder="Write your comment here..." rows="4"></textarea>
+    <button type="submit" id="comment_button" name="post" class="button button-secondary">
+        Post
+    </button>
 </div>
