--- a/private/skins/qobo/templates/upload.twig
+++ b/private/skins/qobo/templates/upload.twig
@@ -8,8 +8,10 @@
                 <h1>Upload</h1>
             </div>
             <div class="banner banner-danger">
-                Make sure you have read the <a href="/guidelines">guidelines</a> first. Failure to comply
-                with the guidelines will result in a swift termination of your account(s).
+                <span class="notification-text">
+                    Make sure you have read the <a href="/guidelines">guidelines</a> first. Failure to comply
+                    with the guidelines may result in a swift termination of your account(s).
+                </span>
             </div>
             <div class="content-box">
                 <form name="uploadForm" id="uploadForm" method="post" action="upload" enctype="multipart/form-data">
