--- a/biscuit/stylesheets/default/_banner.scss
+++ b/biscuit/stylesheets/default/_banner.scss
@@ -1,27 +1,29 @@
 .banner {
-  padding: 8px 5px;
+  padding: 8px 10px;
+  display: flex;
+  align-items: center;
+  border-radius: 4px;
 
   .notification-icon {
-    font-size: 20px;
-  }
-
-  .notification-text {
-    vertical-align: middle;
-    height: 20px;
-    display: inline-block;
+    margin-right: 6px;
   }
 }
 
 @each $color, $value in $color-map {
   .banner-#{$color} {
-    background: $value;
-    @include gradient-y($start-color: lighten($value, 2.5%), $end-color: $value);
+    background-color: $value;
     color: contrast-color($value, #000, #fff);
 
     // without this, for example, the "guidelines" link in "Make sure you have read the guidelines first"
     // would look weird as shit.
     a {
-      color: contrast-color($value, #000, #fff);
+      color: inherit;
+      text-decoration: underline;
+      transition: color 0.3s ease;
+
+      &:hover {
+        color: lighten(contrast-color($value, #000, #fff), 20%);
+      }
     }
   }
 }
