--- a/biscuit/stylesheets/shared/_base_variables.scss
+++ b/biscuit/stylesheets/shared/_base_variables.scss
@@ -4,12 +4,12 @@
 
 $threshold: 75%; // contrast threshold
 
-$primary: #1b7fcc; // primary color
+$primary: #3498db; // primary color
 $primary-darker: darken($primary, 33%); // darker primary color
-$secondary: #EEEEEE; //secondary color (nearly white)
-$green: #559900;
-$yellow: #ffb81f;
-$red: #993300;
+$secondary: #f5f5f5; //secondary color (nearly white)
+$green: #32cd32;
+$yellow: #ffc107;
+$red: #dc143c;
 
 $color-map: (
         "primary": $primary,
