--- a/private/skins/qobo/templates/admin.twig
+++ b/private/skins/qobo/templates/admin.twig
@@ -40,36 +40,38 @@
 
 			<div id="tab2" class="tabcontent">
 				<div class="content-box">
-					<h1>Ban user</h1>
-					<form name="uploadForm" id="uploadForm" method="post" action="admin" enctype="multipart/form-data">
+					<h1>Ban User</h1>
+					<form id="banForm" method="post" action="admin" enctype="multipart/form-data">
 						<div class="banner banner-secondary">
 							<strong>NOTE</strong>: We currently don't support expirable bans.
 						</div>
-						<input type="hidden" id="action" name="action" value="ban_user" />
+						<input type="hidden" name="action" value="ban_user" />
 						<div class="form-input">
 							<label for="user_to_ban">Username:</label>
-							<input type="text" class="form-submit" id="user_to_ban" name="user_to_ban" required="">
+							<input type="text" id="user_to_ban" name="user_to_ban" class="form-submit" required>
 							<label for="reason">Reason:</label>
-							<input type="text" class="form-submit" id="reason" name="reason" required="">
+							<input type="text" id="reason" name="reason" class="form-submit" required>
 						</div>
 						<div class="form-button-container">
-							<input class="button button-danger" type="submit" id="upload" name="upload"
-								   value="Ban">
+							<input type="submit" id="upload" name="upload" class="button button-danger" value="Ban">
 						</div>
 					</form>
 				</div>
 				<br>
 				<div class="content-box">
-					<h1>Banned users</h1>
+					<h1>Banned Users</h1>
 					<div class="banner banner-secondary">
 						<strong>NOTE</strong>: If the account gets automatically banned after being unbanned, then the account's latest IP is IP banned.
 					</div>
 					<table class="c1">
+						<thead>
 						<tr class="h">
 							<th style="width:150px">Username</th>
 							<th>Reason</th>
 							<th style="width:70px">Unban</th>
 						</tr>
+						</thead>
+						<tbody>
 						{% for user in data.bans %}
 							<tr style="height: 30px;">
 								<td>{{ user.name }}</td>
@@ -77,9 +79,10 @@
 									{{ user.ban_reason }}
 									<small>({{ user.ban_time | date('F j, Y') }}/{{ user.ban_time | relative_time }})</small>
 								</td>
-								<td><a href="/admin?action=unban_user&user={{ user.id }}" class="button button-danger">Unban</a></td>
+								<td><a href="/admin?action=unban_user&user={{ user.id }}" class="button button-secondary">Unban</a></td>
 							</tr>
 						{% endfor %}
+						</tbody>
 					</table>
 				</div>
 			</div>
