--- a/private/skins/qobo/templates/ip_banned.twig
+++ b/private/skins/qobo/templates/ip_banned.twig
@@ -9,7 +9,7 @@
         </div>
         <div class="content-box">
             <p>You have been IP banned from {{ website_branding.name }}.</p>
-            <p>Your ban was filed on {{ data.time | date('F j, Y') }}, and it will not expire.</p>
+            <p>Your ban was filed on {{ data.time | date('F j, Y') }}, and won't expire.</p>
             <p>Your IP is {{ data.ip }},
                 {% if users|length > 1 %}
                     and the accounts linked to this IP are
