--- a/private/skins/qobo/templates/settings.twig
+++ b/private/skins/qobo/templates/settings.twig
@@ -17,7 +17,7 @@
                 <span>Audience rating</span>
             </div>
 
-            <p>Choose the highest audience rating you are most comfortable with. Higher rating submissions may not be appropriate.</p>
+            <p>Select the highest audience rating you're comfortable with. Higher ratings might not be suitable.</p>
 
             <select class="form-submit" name="rating" id="rating">
                 <option value="general" {% if user_data.comfortable_rating == "general" %}selected{% endif %}>General</option>
