do same for index and login + implement "remember me"

--- a/private/skins/qobo/templates/login.twig
+++ b/private/skins/qobo/templates/login.twig
@@ -23,6 +23,11 @@
                             <input type="password" name="password" class="form-submit" placeholder="Password">
                         </div>
 
+                        <div>
+                            <input type="checkbox" name="remember_me" id="remember_me">
+                            <label for="remember_me">Remember me (for up to a year)</label>
+                        </div>
+
                         <div class="form-button-container">
                             <input type="submit" class="button button-primary" value="Login" name="loginsubmit">
                         </div>
