remove qobo references to avoid confusion with bitqobo

--- a/private/skins/biscuit/templates/admin.twig
+++ b/private/skins/biscuit/templates/admin.twig
@@ -205,7 +205,7 @@
 					y: {
 						beginAtZero: true
 					},
-					{% if is_qobo %}
+					{% if is_chaziz_sb %}
 					x: {
 						type: 'time',
 						min: '2021-01-30 00:00:00',
