--- a/private/skins/biscuit/templates/components/default/footer.twig
+++ b/private/skins/biscuit/templates/components/default/footer.twig
@@ -7,7 +7,7 @@
         {% if is_debug %}
             <p>{{ profiler_stats() }}</p>
         {% endif %}
-        {% if is_qobo %}
+        {% if is_chaziz_sb %}
             <p><small>A <a href="https://bluffingo.net/">Chaziz</a> Project.</small></p>
         {% endif %}
     </div>
