--- a/private/skins/biscuit/templates/index.twig
+++ b/private/skins/biscuit/templates/index.twig
@@ -46,7 +46,7 @@
                 {% else %}
                     <div class="jumbotron-logged-out">
                         <h1>Welcome to {{ website_branding.name }}</h1>
-                        {% if is_qobo %}
+                        {% if is_chaziz_sb %}
                             <p>Your content, your narration, your niche on the web.</p>
                         {% else %}
                             <p>Insert slogan.</p>
