--- a/private/skins/common/player.twig
+++ b/private/skins/common/player.twig
@@ -27,7 +27,7 @@
         preload: "auto"
     });
 
-    {% if is_qobo %}
+    {% if is_chaziz_sb %}
     player.src([{
         src: '{{ submission.file }}',
         type: 'application/x-mpegURL'
