--- a/private/skins/biscuit/templates/browse.twig
+++ b/private/skins/biscuit/templates/browse.twig
@@ -3,9 +3,13 @@
 {% set title = "Browse" %}
 
 {% block content %}
+    {% set items_per_page = 20 %}
+    {% set total_pages = (data.count / items_per_page) | round(0, 'ceil') %}
+    {% set current_page = page %}
+
     <div class="section">
         <div class="section-title">
-            <h1>Browse ({{ data.count }})</h1>
+            <h1>Browse (Page {{ current_page }} of {{ total_pages }})</h1>
         </div>
         <div class="content-box">
             {% for submission in data.submissions %}
@@ -18,6 +22,6 @@
             {% set le_url = 'browse?type=' ~ type ~ '&page=%s' %}
         {% endif %}
 
-        {{ pagination(data.count, 20, le_url, page) }}
+        {{ pagination(data.count, items_per_page, le_url, current_page) }}
     </div>
 {% endblock %}
