--- a/private/skins/biscuit/templates/version.twig
+++ b/private/skins/biscuit/templates/version.twig
@@ -32,6 +32,9 @@
                 along with this program. If not, see
                 <a href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>.
             </p>
+            <p>
+                You can download a source code <a href="https://github.com/bluffingo/OpenSB">here</a>.
+            </p>
             <hr>
             <h2>Installed software</h2>
             <table class="c1">
