move fix to scss

--- a/biscuit/stylesheets/default/_header.scss
+++ b/biscuit/stylesheets/default/_header.scss
@@ -12,6 +12,10 @@
   display: flex;
   align-items: center;
 
+  .header-links-menu-container {
+    direction: rtl;
+  }
+
   .header-links-username {
     @include responsive('medium') {
       display: block;
