--- a/private/skins/biscuit/templates/components/default/header.twig
+++ b/private/skins/biscuit/templates/components/default/header.twig
@@ -23,7 +23,7 @@
                     <!--
                     <a class="menulink" href="/notices">{{ user_notice_data }} notifications</a>
                     -->
-                    <div style="direction: rtl;">
+                    <div class="header-links-menu-container">
                         <div class="menuButton" data-menu-id="user-menu">
                             <img src="{{ profile_picture(user_data.name) }}" class="pfp" alt="{{ user_data.name }}">
                         </div>
